handle send email
